--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,17 +81,12 @@ table {
 table,
 table th,
 table td {
-    border: 1px solid #d5d5d5;
+    border: 1px dashed #d5d5d5;
     border-collapse: collapse;
     padding: 10px;
 }
 
-table thead {
-    background-color: #d5d5d5;
-}
-
-table tr:hover {
-    background-color: #d5d5d5;
+table tr {
     cursor: pointer;
 }
 
@@ -156,7 +151,29 @@ h3 {
     font-size: 5rem;
 }
 
-.info_container>.info_item {
+.info_container {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 5px;
+}
+
+.info_container>div {
     padding: 0.3rem;
     margin-bottom: 0.8rem;
+    padding: 0.5rem;
+}
+
+.col-8 {
+    max-width: 70vw;
+    border: 1px dashed #b3b0b0;
+}
+
+.col-4 {
+    max-width: 30vw;
+    border: 1px dashed #7e7c7c;
+}
+
+.info_item {
+    max-width: 100%;
+    margin-bottom: 0.3rem;
 }
