--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,6 @@ a {
 
 .content {
     min-width: 95%;
-    width: 90%;
     margin: auto;
 }
 
@@ -81,7 +80,6 @@ table {
 table,
 table th,
 table td {
-    border: 1px dashed #d5d5d5;
     border-collapse: collapse;
     padding: 10px;
 }
@@ -119,6 +117,14 @@ h3 {
     padding: 0.5rem;
 }
 
+h4 {
+    text-transform: uppercase;
+    width: 100%;
+    padding: 5px 10px;
+    background-color: #FFFFFF;
+    color: #dd392b;
+}
+
 .error {
     font-size: 12px;
     margin: 5px 0.5rem;
@@ -126,19 +132,22 @@ h3 {
 }
 
 .section_heading {
-    padding: 0.5rem;
+    padding: 0.1rem 0.5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px dashed #7e7c7c;
-    margin-bottom: 0.5rem;
     text-transform: capitalize;
+}
+
+.section_heading img {
+    height: 38.5px;
+    width: 100px;
 }
 
 .section_heading a {
     display: block;
-    border: 1px solid #b6b6b6;
+    border: 1px solid #FFFFFF;
     padding: 0.2rem 1rem;
     border-radius: 0.2rem;
 }
@@ -165,15 +174,33 @@ h3 {
 
 .col-8 {
     max-width: 70vw;
-    border: 1px dashed #b3b0b0;
 }
 
 .col-4 {
     max-width: 30vw;
-    border: 1px dashed #7e7c7c;
+    max-height: 90vh;
+    overflow-y: scroll;
 }
 
 .info_item {
-    max-width: 100%;
-    margin-bottom: 0.3rem;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    justify-content: start;
+    align-items: center;
+}
+
+.info_item:not(:last-child) {
+    margin-bottom: 0.5rem;
+}
+
+.info_item .item {
+    padding: 0.3rem;
+    word-break: break-all;
+    border: 1px solid #FFFFFF;
+    margin: 0.3rem;
+}
+
+.redis {
+    background-color: #dd392b !important;
+    color: #FFFFFF !important;
 }
